--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "johngrib.github.io",
+  "name": "johklo.github.io",
   "version": "1.0.0",
   "description": "data generator",
   "main": "generateData.js",
   "dependencies": {
     "yamljs": "^0.3.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo no test found"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/johngrib/johngrib.github.io.git"
+    "url": "git+https://github.com/johklo/johnklo.github.io.git"
   },
-  "author": "John Grib",
+  "author": "John Kim",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/johngrib/johngrib.github.io/issues"
+    "url": "https://github.com/johnklo/johklo.github.io/issues"
   },
-  "homepage": "https://github.com/johngrib/johngrib.github.io#readme"
+  "homepage": "https://github.com/johnklo/johklo.github.io#readme",
+  "keywords": []
 }
